<!--
  ~ Copyright 2020 Nothing
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Anti Corona</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="faq">FAQ</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_ocean">Ocean</string>
    <string name="indonesian_case">Indonesian Case</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="global_case">Global Case</string>
    <string name="total_cases">Cases: {{REG}}</string>
    <string name="toolbar_cases">Corona Cases</string>
    <string name="toolbar_faq">FAQ</string>
    <string name="toolbar_news">Corona News</string>
    <string name="toolbar_province">Province Case</string>
    <string name="show_more">Show More</string>
    <string name="server_down">Sorry, Server Is Unreachable</string>
    <string name="answer">Answer</string>
    <string name="reg">{{REG}}</string>
    <string name="toolbar_countries">Countries Case</string>
    <string name="toolbar_web">Web News</string>
    <string name="detail">Detail</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="latest_news">See the latest news now</string>
    <string name="see_expanded">Expand to see more</string>
    <string name="setting">Setting</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="covid_center">COVID-19 Information Center</string>
    <string name="anticorona_support">AntiCorona Support</string>
    <string name="hotline">Hotline</string>
    <string name="report_bug">Report Bug</string>
</resources>
