<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Nothing
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/btNavFaq"
        android:title="@string/faq"
        android:icon="@drawable/faq"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/btNavHome"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/btNavNews"
        android:title="@string/news"
        android:icon="@drawable/news"
        app:showAsAction="ifRoom" />
</menu>