<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Nothing
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.setting.SettingActivity">

        <TextView
            android:id="@+id/btChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:padding="@dimen/double_spacing"
            android:background="@drawable/ripple"
            style="@style/TextNormal.Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settingDivider1"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:src="@drawable/divider"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btChangeLanguage"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/btChangeTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_theme"
            android:padding="@dimen/double_spacing"
            android:background="@drawable/ripple"
            style="@style/TextNormal.Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingDivider1"/>

        <ImageView
            android:id="@+id/settingDivider2"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:src="@drawable/divider"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btChangeTheme"
            tools:ignore="ContentDescription" />

        <Switch
            android:id="@+id/btNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification"
            android:padding="@dimen/double_spacing"
            android:background="@drawable/ripple"
            style="@style/TextNormal.Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingDivider2"/>

        <ImageView
            android:id="@+id/settingDivider3"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:src="@drawable/divider"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btNotification"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/btContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:padding="@dimen/double_spacing"
            android:background="@drawable/ripple"
            style="@style/TextNormal.Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingDivider3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>